<resources>

    <string name="app_name">Git4Android</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Git4Android</string>
    <string name="button_init_repo">Create new Git repository</string>
    <string name="button_browser">Open file browser</string>
    <string name="button_select_directory">Select current directory</string>
    <string name="button_new_directory">Create new directory</string>
    <string name="button_clone">Clone remote Git repository</string>
    <string name="button_genKeys">Generate new keypair</string>
    <string name="button_add_files">Add a file</string>
    <string name="button_commit">Commit changes</string>
    <string name="button_push">Push commits</string>
    <string name="button_pull">Pull commits</string>
    <string name="button_add_remote">New remote origin url</string>
    <string name="button_show_remote">Show remote origin url</string>
    <string name="button_list_repos">List Git repositories</string>
    <string name="repository_textview">Select a Git repository:</string>
    <string name="button_log">Show log</string>
    <string name="button_status">Show status</string>
    <string name="clone_repository_url">URL</string>
    <string name="path_to_save_repository">Path</string>
    <string name="button_submit_clone_repository">Clone!</string>
    <string name="button_select_folder">Select Path</string>
    <string name="clone_repository_url_description">Remote Url source of Git repository</string>
    <string name="path_to_save_repository_description">Path to store Git repository</string>
    <string name="password_description">Password for http/https/ssh</string>
    <string name="password">Password</string>
    <string name="button_submit_init_repository">Init Git repository</string>
    <string name="path_to_init_repository_description">Path to init Git repository</string>
    <string name="ssh_private_key_description">Private key:</string>
    <string name="ssh_public_key_description">Public key:</string>
    <string name="button_save">Save</string>
    <string name="username_description">Username for http/https</string>
    <string name="git_repository_name_description">Name for the Git Repository</string>
    <string name="button_checkout_commit">Checkout by commit</string>
    <string name="button_all_branches">Show all branches</string>
    <string name="button_current_branch">Show current branch name</string>
    <string name="button_checkout_branch">Check out branch</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_credentials">Enter credentials</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="path">Path</string>
    <string name="creation_date">Creation date</string>
    <string name="optional">(optional)</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="repository">Repository</string>
    <string name="current_path">Current path</string>
    <string name="create_new_directory">Create new directory</string>
    <string name="branch_name">Branch name</string>
    <string name="commit_id">Commit ID</string>

</resources>