<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_pull"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="TRUE"
            android:layout_alignParentRight="TRUE"
            android:layout_alignParentTop="TRUE"
            android:text="@string/button_pull" />

        <Button
            android:id="@+id/button_add_file"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_pull"
            android:layout_gravity="bottom"
            android:text="@string/button_add_files" />

        <Button
            android:id="@+id/button_commit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_add_files"
            android:layout_gravity="bottom"
            android:text="@string/button_commit" />

        <Button
            android:id="@+id/button_push"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_commit"
            android:layout_gravity="bottom"
            android:text="@string/button_push" />

        <Button
            android:id="@+id/button_add_remote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_push"
            android:layout_gravity="bottom"
            android:text="@string/button_add_remote" />

        <Button
            android:id="@+id/button_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_add_remote"
            android:layout_gravity="bottom"
            android:text="@string/button_log" />

        <Button
            android:id="@+id/button_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_log"
            android:layout_gravity="bottom"
            android:text="@string/button_status" />

        <Button
            android:id="@+id/button_show_remote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_status"
            android:layout_gravity="bottom"
            android:text="@string/button_show_remote" />

        <Button
            android:id="@+id/button_checkout_commit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_show_remote"
            android:layout_gravity="bottom"
            android:text="@string/button_checkout_commit" />

        <Button
            android:id="@+id/button_current_branch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_checkout_commit"
            android:layout_gravity="bottom"
            android:text="@string/button_current_branch" />

        <Button
            android:id="@+id/button_all_branches"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_current_branch"
            android:layout_gravity="bottom"
            android:text="@string/button_all_branches" />
        
         <Button
            android:id="@+id/button_checkout_branch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_all_branches"
            android:layout_gravity="bottom"
            android:text="@string/button_checkout_branch" />
    </RelativeLayout>

</ScrollView>
