<?xml version="1.0" encoding="utf-8"?>     
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent" > 

    <TextView
        android:id="@+id/path_to_init_repository_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path_to_init_repository_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/path_to_init_repository"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_below="@+id/path_to_init_repository_description"
        android:layout_alignParentLeft="true" >
        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/button_init_select_folder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_below="@+id/path_to_init_repository"
        android:layout_alignParentLeft="true"
        android:text="@string/button_select_folder" />
    
   <Button
        android:id="@+id/button_submit_init_repository"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_below="@+id/button_init_select_folder"
        android:text="@string/button_submit_init_repository" />

</RelativeLayout>



